Fixed a bug that certain resolutions got horizontal overflow

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 html{
   font-family: 'Muli', sans-serif;
+  overflow-x: hidden;
 }
 body{
   padding: 0;
